Fix nth-element selector for spacing, and loops for actual submissions and users.

--- a/views/themed/sketch1/webroot/css/styles.css
+++ b/views/themed/sketch1/webroot/css/styles.css
@@ -66,7 +66,7 @@ h2 {
 	padding-bottom: 25px;
 	overflow: hidden;
 }
-.user-summary:nth-child(4n+1) {
+.user-summary:nth-child(4n) {
 	padding-right: 0;
 }
 .main-image,
